--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "devDependencies": {
         "axios": "^0.17",
-        "bootstrap-sass": "^3.3.7",
+        "bulma": "^0.6.2",
+        "bulma-extensions": "^0.7.5",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
